<resources>
    <string name="app_name">马帮代理端</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="tv_login_title">登录</string>
    <string name="et_login_username">请输入用户名</string>
    <string name="et_login_pwd">请输入密码</string>
    <string name="tv_login_denglu">登录</string>
    <string name="btn_main_shuaxin">刷新</string>
    <string name="tv_main_title">代理商端</string>
    <string name="tv_main_dingdan">订单查看</string>
    <string name="tv_main_jishi">技师管理</string>
    <string name="tv_main_day">今日订单数据统计</string>
    <string name="tv_main_mouth">本月订单数据统计</string>
    <string name="tv_main_all">全部订单数据统计</string>
    <string name="tv_main_chakan">查看详情</string>
    <string name="tv_main_dingdanshu">订单数</string>
    <string name="tv_main_dingdanjine">订单金额(元)</string>
    <string name="tv_main_haopingshu">好评数</string>
    <string name="drawer_open">打开侧滑</string>
    <string name="drawer_close">关闭侧滑</string>
    <string name="tv_cehua_gerenziliao">个人资料</string>
    <string name="tv_cehua_mimaxiugai">密码修改</string>
    <string name="tv_cehua_fuwuxieyi">服务协议</string>
    <string name="tv_cehua_yijianfankui">意见反馈</string>
    <string name="tv_cehua_guanyuwomen">关于我们</string>
    <string name="tv_cehua_tuichudenglu">退出登录</string>
    <string name="tv_yuanmimaxiugai_title">修改密码</string>
    <string name="et_yuanmimaxiugai_pwd">请输入原密码</string>
    <string name="et_yuanmimaxiugai_newpwd">请输入新密码</string>
    <string name="tv_shezhimima_tishi">设置成功后，下次可直接使用新密码登录账户</string>
    <string name="tv_shezhimima_queding">确定</string>
    <string name="tv_myziliao_title">我的资料</string>
    <string name="tv_myziliao_jibenxinxi">基本信息</string>
    <string name="tv_myziliao_yinhangkaxinxi">银行卡信息(必须是本人持有的银行卡)</string>
    <string name="tv_myziliao_shenfenzhengxinxi">身份证信息</string>
    <string name="tv_myziliao_xingming">姓名：</string>
    <string name="tv_myziliao_bianji">编辑</string>
    <string name="tv_myziliao_xingbie">性别：</string>
    <string name="tv_myziliao_shoujihao">手机号：</string>
    <string name="tv_myziliao_shenfenzhenghao">身份证号：</string>
    <string name="tv_myziliao_kaihuhang">开户行：</string>
    <string name="tv_myziliao_kaihuhangdizhi">开户行地址：</string>
    <string name="tv_myziliao_yinhangkahao">银行卡号：</string>
    <string name="tv_myziliao_shenfenzhengzhengmian">身份证正面照片：</string>
    <string name="tv_myziliao_shenfenzhengfanmian">身份证反面照片：</string>
    <string name="tv_myziliao_shouchishenfenzheng">手持身份证照片：</string>
    <string name="tv_myziliao_tijiao">提交</string>
    <string name="tv_dingdanchakan_title">订单查看</string>
    <string name="rb_dingdanchakan_all">全部订单</string>
    <string name="rb_dingdanchakan_yiwancheng">已完成</string>
    <string name="rb_dingdanchakan_daijiedan">等待服务</string>
    <string name="rb_dingdanchakan_jinxingzhong">进行中</string>
    <string name="tv_dingdantongji_title">订单统计详情</string>
    <string name="tv_dingdantongji_jishipaihang">技师排行</string>
    <string name="rb_dingdantongji_all">全部</string>
    <string name="rb_dingdantongji_day">今日</string>
    <string name="rb_dingdantongji_mouth">本月</string>
    <string name="tv_item_dingdan_jishi">技师：</string>
    <string name="tv_jishiguanli_title">技师列表</string>
    <string name="btn_jishiguanli_more">添加技师</string>
    <string name="tv_item_jishiguanli_jishi">技师</string>
    <string name="tv_item_jishiguanli_phone">手机号</string>
    <string name="tv_item_jishiguanli_shenhe">审核</string>
    <string name="tv_item_jishiguanli_kaishijiedan">开始接单</string>
    <string name="tv_addjishi_title">添加技师</string>
    <string name="tv_addjishi_jibenxinxi">基本信息</string>
    <string name="tv_addjishi_yinhangkaxinxi">银行卡信息(必须是本人持有的银行卡)</string>
    <string name="tv_addjishi_shenfenzhengxinxi">身份证信息</string>
    <string name="tv_addjishi_xingming">姓名：</string>
    <string name="tv_addjishi_bianji">编辑</string>
    <string name="tv_addjishi_xingbie">性别：</string>
    <string name="tv_addjishi_shoujihao">手机号：</string>
    <string name="tv_addjishi_shenfenzhenghao">身份证号：</string>
    <string name="tv_addjishi_kaihuhang">开户行：</string>
    <string name="tv_addjishi_kaihuhangdizhi">开户行地址：</string>
    <string name="tv_addjishi_yinhangkahao">银行卡号：</string>
    <string name="tv_addjishi_shenfenzhengzhengmian">身份证正面照片：</string>
    <string name="tv_addjishi_shenfenzhengfanmian">身份证反面照片：</string>
    <string name="tv_addjishi_shouchishenfenzheng">手持身份证照片：</string>
    <string name="tv_addjishi_tijiao">提交</string>
    <string name="tv_addjishi_shenhe">审核</string>
    <string name="tv_addjishi_kaishijiedan">开始接单</string>
    <string name="tv_jishipaihang_title">技师排行</string>
    <string name="rb_jishipaihang_all">全部</string>
    <string name="rb_jishipaihang_day">今日</string>
    <string name="rb_jishipaihang_mouth">本月</string>
    <string name="rb_jishipaihang_jishi">技师</string>
    <string name="rb_jishipaihang_dingdanzonge">订单总额</string>
    <string name="rb_jishipaihang_dingdanshu">订单数</string>
    <string name="rb_jishipaihang_haopingshu">好评数</string>
    <string name="tv_jishi_title">技师管理</string>
    <string name="tv_jishi_jishiliebiao">技师列表</string>
    <string name="tv_jishi_jishiweizhi">技师位置</string>
    <string name="tv_jishiweizhi_title">技师位置</string>
</resources>
