<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/titlebg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_yuanmimaxiugai_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/back" />


        <TextView
            android:id="@+id/tv_yuanmimaxiugai_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tv_yuanmimaxiugai_title"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <Button
            android:id="@+id/btn_yuanmimaxiugai_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:textColor="@color/textcolor"
            android:textSize="16sp"
            android:visibility="invisible" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:text="@string/tv_shezhimima_tishi"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <EditText
        android:id="@+id/et_yuanmimaxiugai_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:background="#ffffff"
        android:padding="10dp"
        android:hint="@string/et_yuanmimaxiugai_pwd"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/et_yuanmimaxiugai_newpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:background="#ffffff"
        android:padding="10dp"
        android:hint="@string/et_yuanmimaxiugai_newpwd"
        android:inputType="textPassword"
        />


    <Button
        android:id="@+id/btn_yuanmimaxiugai_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/titlebg"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/tv_shezhimima_queding"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

</LinearLayout>
