<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2f2f2"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/titlebg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_jishi_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/back" />


        <TextView
            android:id="@+id/tv_jishi_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tv_jishi_title"
            android:textColor="@color/cc_white"
            android:textSize="20sp" />


        <Button
            android:id="@+id/btn_jishi_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:textColor="@color/textcolor"
            android:textSize="16sp"
            android:text="@string/btn_jishiguanli_more"
            android:visibility="invisible"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_jishi_jishiliebiao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:textSize="18sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/tv_jishi_jishiliebiao"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/tv_jishi_jishiweizhi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:textSize="18sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/tv_jishi_jishiweizhi"
        android:textColor="@color/black"
        />


</LinearLayout>
