<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2f2f2"
    android:clickable="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/titlebg"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/iv_cehua_touxiang"
            android:layout_width="96dp"
            android:layout_height="96dp"
            app:civ_border_width="2dp"
            android:layout_marginTop="20dp"
            app:civ_border_color="#FF000000"
            android:background="@mipmap/touxiang"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <TextView
                android:id="@+id/tv_cehua_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:text="11"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/tv_cehua_diqu"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:text="22"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/tv_cehua_gerenziliao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:textSize="18sp"
        android:text="@string/tv_cehua_gerenziliao"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#ffffff"
        />



    <TextView
        android:id="@+id/tv_cehua_mimaxiugai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        android:text="@string/tv_cehua_mimaxiugai"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#ffffff"
        />


    <TextView
        android:id="@+id/tv_cehua_fuwuxieyi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        android:text="@string/tv_cehua_fuwuxieyi"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#ffffff"
        />




    <TextView
        android:id="@+id/tv_cehua_yijianfankui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/tv_cehua_yijianfankui"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#ffffff"
        />

    <TextView
        android:id="@+id/tv_cehua_guanyuwomen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/tv_cehua_guanyuwomen"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#ffffff"
        />

    <TextView
        android:id="@+id/tv_cehua_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="24sp"
        android:text="@string/tv_cehua_tuichudenglu"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:background="@color/titlebg"
        />


</LinearLayout>
