<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2f2f2"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/titlebg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_login_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@mipmap/ic_launcher"
            android:visibility="invisible"
            />


        <Button
            android:id="@+id/btn_login_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:textColor="@color/textcolor"
            android:textSize="16sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_shezhimima_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_login_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>


    <EditText
        android:id="@+id/et_login_username"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_login_username"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/et_login_pwd"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_login_pwd"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="18sp"
        android:inputType="textPassword"
        />


    <Button
        android:id="@+id/btn_login_denglu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/titlebg"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/tv_login_denglu"
        />

</LinearLayout>
