<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2f2f2"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/titlebg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_jishipaihang_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/back" />


        <TextView
            android:id="@+id/tv_jishipaihang_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tv_jishipaihang_title"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <Button
            android:id="@+id/btn_jishipaihang_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="invisible"
            />
    </RelativeLayout>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffffff"
        >


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_jishipaihang_all"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/rb_jishipaihang_all"
                android:textColor="@drawable/rb_selector"
                android:textSize="18sp" />

            <View
                android:id="@+id/line_jishipaihang_all"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@color/titlebg"
                android:visibility="invisible"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_jishipaihang_day"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/rb_jishipaihang_day"
                android:textColor="@drawable/rb_selector"
                android:textSize="18sp" />

            <View
                android:id="@+id/line_jishipaihang_day"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@color/titlebg"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_jishipaihang_mouth"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/rb_jishipaihang_mouth"
                android:textColor="@drawable/rb_selector"
                android:textSize="18sp" />

            <View
                android:id="@+id/line_jishipaihang_mouth"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@color/titlebg"
                android:visibility="invisible" />
        </LinearLayout>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/rb_jishipaihang_jishi"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:text="@string/rb_jishipaihang_dingdanzonge"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:text="@string/rb_jishipaihang_dingdanshu"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:text="@string/rb_jishipaihang_haopingshu"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_jishipaihang_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

</LinearLayout>
