<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2f2f2"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/titlebg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_dingdantongji_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/back" />


        <TextView
            android:id="@+id/tv_dingdantongji_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tv_dingdantongji_title"
            android:textColor="@color/cc_white"
            android:textSize="20sp" />


        <Button
            android:id="@+id/btn_dingdantongji_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:textColor="@color/cc_white"
            android:textSize="16sp"
            android:text="@string/tv_dingdantongji_jishipaihang"
            />
    </RelativeLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffffff"
        >


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_dingdantongji_all"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/rb_dingdantongji_all"
                android:textColor="@drawable/rb_selector"
                android:textSize="18sp" />

            <View
                android:id="@+id/line_dingdantongji_all"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@color/titlebg"
                android:visibility="invisible"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_dingdantongji_day"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/rb_dingdantongji_day"
                android:textColor="@drawable/rb_selector"
                android:textSize="18sp" />

            <View
                android:id="@+id/line_dingdantongji_day"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@color/titlebg"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_dingdantongji_mouth"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/rb_dingdantongji_mouth"
                android:textColor="@drawable/rb_selector"
                android:textSize="18sp" />

            <View
                android:id="@+id/line_dingdantongji_mouth"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@color/titlebg"
                android:visibility="invisible" />
        </LinearLayout>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_dingdantongji_dingdanshu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="2dp"
                android:text="@string/tv_main_dingdanshu"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_dingdantongji_dingdanjine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:text="@string/tv_main_dingdanjine"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_dingdantongji_haopingshu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:text="@string/tv_main_haopingshu"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/lv_dingdantongji_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        />

</LinearLayout>
